--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Caja\cp_conciliacion_Caja_det_Bus.cs" />
     <Compile Include="Caja\cp_conciliacion_Caja_det_Ing_Caja_Bus.cs" />
     <Compile Include="Caja\cp_conciliacion_Caja_det_x_ValeCaja_Bus.cs" />
+    <Compile Include="Contabilidad\ast_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Bus.cs" />
@@ -88,7 +89,6 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Bus.cs" />
-    <Compile Include="CuentasPorPagar\ats_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Bus.cs" />
