--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Banco\ba_Catalogo_Bus.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_Bus.cs" />
     <Compile Include="Banco\ba_Conciliacion_Bus.cs" />
+    <Compile Include="Banco\ba_Conciliacion_det_IngEgr_Bus.cs" />
     <Compile Include="Banco\ba_parametros_Bus.cs" />
     <Compile Include="Banco\ba_Talonario_cheques_x_banco_Bus.cs" />
     <Compile Include="Banco\ba_tipo_nota_Bus.cs" />
