--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -461,6 +461,12 @@
     <Compile Include="Reportes\Banco\BAN_004_Rpt.Designer.cs">
       <DependentUpon>BAN_004_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_005_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_005_Rpt.Designer.cs">
+      <DependentUpon>BAN_005_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Caja\CAJ_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -8681,6 +8687,7 @@
     <Content Include="Areas\Contabilidad\Views\ATS\Nuevo.cshtml" />
     <Content Include="Areas\Banco\Views\ConciliacionBanco\_GridViewPartial_ConciliacionBanco_x_cruzar.cshtml" />
     <Content Include="Areas\Banco\Views\ConciliacionBanco\_GridViewPartial_ConciliacionBanco_det.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_005.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
@@ -8828,6 +8835,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_004_Rpt.resx">
       <DependentUpon>BAN_004_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_005_Rpt.resx">
+      <DependentUpon>BAN_005_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
