--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -376,6 +376,8 @@
     <Compile Include="Facturacion\fa_cliente_Data.cs" />
     <Compile Include="Facturacion\fa_cliente_tipo_Data.cs" />
     <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Data.cs" />
+    <Compile Include="Facturacion\fa_factura_Data.cs" />
+    <Compile Include="Facturacion\fa_factura_det_Data.cs" />
     <Compile Include="Facturacion\fa_formaPago_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Data.cs" />
@@ -394,6 +396,12 @@
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="fa_cliente_x_fa_Vendedor_x_sucursal.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_factura.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_factura_det.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="fa_formaPago.cs">
