--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -143,6 +143,8 @@
     <Compile Include="Facturacion\fa_cliente_Info.cs" />
     <Compile Include="Facturacion\fa_cliente_tipo_Info.cs" />
     <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Info.cs" />
+    <Compile Include="Facturacion\fa_factura_det_Info.cs" />
+    <Compile Include="Facturacion\fa_factura_Info.cs" />
     <Compile Include="Facturacion\fa_formaPago_Info.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Info.cs" />
     <Compile Include="Facturacion\fa_proforma_Info.cs" />
