--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -453,6 +453,7 @@
     <Compile Include="General\tb_sucursal_Data.cs" />
     <Compile Include="General\tb_transportista_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
+    <Compile Include="Importacion\imp_gasto_x_ct_plancta_Data.cs" />
     <Compile Include="imp_gasto.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
