--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8700,6 +8700,10 @@
     <Content Include="Areas\Importacion\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Importacion\Views\GastosImportacion\Index.cshtml" />
     <Content Include="Areas\Importacion\Views\GastosImportacion\_GridViewPartial_gastos_imp.cshtml" />
+    <Content Include="Areas\Importacion\Views\GastosImportacion\Nuevo.cshtml" />
+    <Content Include="Areas\Importacion\Views\GastosImportacion\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\GastosImportacion\Anular.cshtml" />
+    <Content Include="Areas\Importacion\Views\GastosImportacion\_CmbCuenta_Gasto.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
