--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -454,10 +454,14 @@
     <Compile Include="General\tb_transportista_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
     <Compile Include="Importacion\imp_gasto_x_ct_plancta_Data.cs" />
+    <Compile Include="Importacion\imp_parametro_Data.cs" />
     <Compile Include="imp_gasto.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="imp_gasto_x_ct_plancta.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_parametro.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="Inventario\in_CatalogoTipo_Data.cs" />
