--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Areas\General\Controllers\TipoDocumentoTalonarioController.cs" />
     <Compile Include="Areas\General\Controllers\TransportistaController.cs" />
     <Compile Include="Areas\General\GeneralAreaRegistration.cs" />
+    <Compile Include="Areas\Importacion\Controllers\CatalogoTipoImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\GastosImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\ParametrosImportacionController.cs" />
     <Compile Include="Areas\Importacion\ImportacionAreaRegistration.cs" />
@@ -8709,6 +8710,7 @@
     <Content Include="Areas\Contabilidad\Views\ATS\_GridViewPartial_anulados.cshtml" />
     <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\_GridViewPartial_comprobante_detalle_Credito.cshtml" />
     <Content Include="Areas\Importacion\Views\ParametrosImportacion\Index.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
