--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Areas\General\Controllers\TipoDocumentoTalonarioController.cs" />
     <Compile Include="Areas\General\Controllers\TransportistaController.cs" />
     <Compile Include="Areas\General\GeneralAreaRegistration.cs" />
+    <Compile Include="Areas\Importacion\Controllers\CatalogoImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\CatalogoTipoImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\GastosImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\ParametrosImportacionController.cs" />
@@ -8712,6 +8713,14 @@
     <Content Include="Areas\Importacion\Views\ParametrosImportacion\Index.cshtml" />
     <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\Index.cshtml" />
     <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\_GridViewPartial_cat_tipo_imp.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\Nuevo.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoTipoImportacion\Anular.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoImportacion\Index.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoImportacion\_GridViewPartial_catalogo_imp.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoImportacion\Nuevo.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoImportacion\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\CatalogoImportacion\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
