--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8723,6 +8723,7 @@
     <Content Include="Areas\General\Views\ReportesPorUsuario\_GridViewPartial_ReportesPorAsignar.cshtml" />
     <Content Include="Areas\General\Views\ReportesPorUsuario\_GridViewPartial_ReportesAsignados.cshtml" />
     <Content Include="Areas\Inventario\Views\Producto\_CmbProducto_composicion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_CmbProducto_padre.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
