--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8730,6 +8730,7 @@
     <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_004.cshtml" />
     <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_005.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\_CmbProductoPadre_Facturacion.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\_CmbProductoHijo_Facturacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
