--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_006_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_007_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_008_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_009_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Info.cs" />
