--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -603,6 +603,12 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_008_Rpt.Designer.cs">
       <DependentUpon>CXP_008_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_009_resumen_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_009_resumen_Rpt.Designer.cs">
+      <DependentUpon>CXP_009_resumen_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\CuentasPorPagar\CXP_009_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -8953,6 +8959,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_008_Rpt.resx">
       <DependentUpon>CXP_008_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_009_resumen_Rpt.resx">
+      <DependentUpon>CXP_009_resumen_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_009_Rpt.resx">
       <DependentUpon>CXP_009_Rpt.cs</DependentUpon>
