--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8757,6 +8757,8 @@
     <Content Include="Areas\Reportes\Views\FacturacionReportes\_CmbProductoHijo_Facturacion.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_009.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_005.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Proforma\_CmbProducto_Proforma.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Proforma\_GridViewPartial_proforma_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
