--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -462,6 +462,9 @@
     <Compile Include="Importacion\imp_catalogo_tipo_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
     <Compile Include="Importacion\imp_gasto_x_ct_plancta_Data.cs" />
+    <Compile Include="Importacion\imp_liquidacion_det_x_imp_orden_compra_ext_Data.cs" />
+    <Compile Include="Importacion\imp_ordencompra_ext_Data.cs" />
+    <Compile Include="Importacion\imp_ordencompra_ext_det_Data.cs" />
     <Compile Include="Importacion\imp_parametro_Data.cs" />
     <Compile Include="imp_catalogo.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
@@ -473,6 +476,24 @@
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="imp_gasto_x_ct_plancta.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_liquidacion.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_liquidacion_det_x_imp_orden_compra_ext.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_orden_compra_ext.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_orden_compra_ext_ct_cbteble_det_gastos.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_orden_compra_ext_det.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="imp_orden_compra_ext_recepcion.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="imp_parametro.cs">
