--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Reportes\Facturacion\FAC_004_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_005_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_005_resumen_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_006_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
